--- a/v2/index.html
+++ b/v2/index.html
@@ -175,13 +175,15 @@
                         <div className="portfolio-desc-container">
                             <h3>{this.props.portfolioData.name}</h3>
                             <div className="portfolio-desc">
+                                <i className="fa fa-bullseye"></i> 
                                 {this.props.portfolioData.role.map(function(r) {
-                                    return r;
+                                    return ' ' + r;
                                 }).join(' / ')}
                             </div>
                             <div className="portfolio-desc">
+                                <i className="fa fa-cogs"></i> 
                                 {this.props.portfolioData.technology.map(function(t) {
-                                    return t;
+                                    return ' ' + t;
                                 }).join(' / ')}
                             </div>
 
@@ -220,11 +222,11 @@
                 };
 
                 var imgW = {
-                    'width':0.9 * this.state.width
+                    'width':0.6 * this.state.width
                 }
 
                 var desc = {__html: this.props.portfolioData.description};
-                var projecturl = this.props.portfolioData.url == '' ? '' : <a href={this.props.portfolioData.url}>{this.props.portfolioData.name}</a>
+                var projecturl = this.props.portfolioData.url == '' ? '' : <a href={this.props.portfolioData.url} className="portfolio-url">({this.props.portfolioData.url})</a>
 
 
                 return (
@@ -242,19 +244,22 @@
                                 <img src={'img/' + this.props.portfolioData.bigpic} style={imgW} />
                             </div>
                             <div className="portfolio-full-description-container">
-                                <p className="portfolio-full-description-item">Technology Used : 
+                                <p className="portfolio-full-description-item"><i className="fa fa-cogs"></i> Technology Used : 
                                     {this.props.portfolioData.technology.map(function(t) {
                                         return t;
                                     }).join(' / ')}
                                 </p>
-                                <p className="portfolio-full-description-item">Role : 
+                                <p className="portfolio-full-description-item"><i className="fa fa-bullseye"></i> Role : 
                                     {this.props.portfolioData.role.map(function(r) {
                                         return r;
                                     }).join(' / ')}
                                 </p>
 
-                                <h3>Summary</h3>
-                                <div dangerouslySetInnerHTML={desc} />
+                                <div className="portfolio-full-description-summary">
+                                    <h3>Summary</h3>
+                                    <div className="portolio-full-summary" dangerouslySetInnerHTML={desc} />
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
