--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="node_modules/sanitize.css/sanitize.css">
+        <link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.min.css">
         <link rel="stylesheet" href="assets/build/css/main.css">
     </head>
     <body>
@@ -22,6 +23,7 @@
             </div>
         </div>
         
+        <script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
         <script src="assets/src/js/main.js"></script>
     </body>
 </html>
